<resources>
    <string name="app_name">nails</string>

        <string name="label_authorization">Регистрация</string>
    <string name="label_authorization1">Авторизация</string>
    <string name="label_authorization2">Вход</string>
    <string name="label_authorization3">Алена</string>
    <string name="label_authorization4">История записей</string>
    <string name="label_authorization5">1. Мастер: Тамара </string>
    <string name="label_authorization6">Услуга: Маникюр с покрытием гель-лак+дизайн</string>
    <string name="label_authorization7">Стоимость: 1000 руб.</string>
    <string name="label_authorization8">Дата записи: 17.12.2021</string>
    <string name="label_authorization9">Время записи: 13:00</string>
        <string name="text_enter">Зарегистрироваться</string>
    <string name="text_enter1">Авторизрваться</string>
        <string name="hint_input_pass">Пароль</string>
        <string name="hint_input_login">Почта</string>
        <string name="hint_input_name">Имя</string>
        <string name="search">Введите запрос</string>
        <string name="search1">Поиск</string>
        <string name="news">Новости</string>
        <string name="s_enter">Найти</string>
        <string name="searchc">Поиск</string>
        <string name="textViewn2">Новости</string>
        <string name="item_news1">Сергей Литвинов-страший</string>
        <string name="item_news">Заслуженный тренер России, после окончания спортивной карьеры всю жизнь проработал тренером, личный тренер своего сына — Сергея Литвинова-младшего — бронзового призера чемпионата Европы по метанию молота.</string>
        <string name="news1">Спортсменка Комплексной спортивной школы олимпийского резерва Мордовии Юлия Сидорова стала бронзовым призером финальных соревнований по легкой атлетике VIII летней Спартакиады учащихся России. </string>

</resources>