<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@mipmap/image">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="36dp"
        android:gravity="center"
        android:text="@string/label_authorization"
        android:textColor="@color/black"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/etLogin"
        android:hint="@string/hint_input_login"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/etPassword"
        android:hint="@string/hint_input_pass"
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/etName"
        android:hint="@string/hint_input_name"
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:text="@string/text_enter" />

    <Button
        android:id="@+id/btnEnter1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:text="@string/label_authorization2" />


</LinearLayout>