<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@mipmap/image">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="36dp"
        android:gravity="center"
        android:text="@string/label_authorization3"
        android:textColor="@color/black"
        android:textSize="34sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:gravity="center"
        android:text="@string/label_authorization4"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:gravity="center"
        android:text="@string/label_authorization5"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:gravity="center"
        android:text="@string/label_authorization6"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:gravity="center"
        android:text="@string/label_authorization7"
        android:textColor="@color/black"
        android:textSize="24sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:gravity="center"
        android:text="@string/label_authorization8"
        android:textColor="@color/black"
        android:textSize="24sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:gravity="center"
        android:text="@string/label_authorization9"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="42dp"
        android:layout_height="38dp"
        android:layout_marginVertical="160dp"
        app:srcCompat="@android:drawable/ic_menu_preferences" />


</LinearLayout>